force-app/main/default/objects/Flowsheet_History__c/Flowsheet_History__c.object-meta.xml
<CustomObject>
    <label>Flowsheet History</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Flowsheet History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flowsheet History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>