force-app/main/default/objects/Flowsheet_History__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Flowsheet History</relationshipLabel>
    <relationshipName>Flowsheet_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>