force-app/main/default/objects/Flowsheet_History__c/fields/Assigned_Staff__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Staff__c</fullName>
    <label>Assigned Staff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>