force-app/main/default/objects/Flowsheet_History__c/fields/CPT_code_Minutes__c.field-meta.xml
<CustomField>
    <fullName>CPT_code_Minutes__c</fullName>
    <label>CPT code Minutes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>