force-app/main/default/objects/Flowsheet_History__c/fields/CPT_Code_Units__c.field-meta.xml
<CustomField>
    <fullName>CPT_Code_Units__c</fullName>
    <label>CPT Code Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>