force-app/main/default/objects/Flowsheet_History__c/fields/Flowsheet_Approved__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flowsheet Approved</label>
    <type>Checkbox</type>
</CustomField>