force-app/main/default/objects/Flowsheet_History__c/fields/Flowsheet_Status__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_Status__c</fullName>
    <label>Flowsheet Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>