force-app/main/default/objects/Flowsheet_History__c/fields/Flowsheet_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Flowsheet_Total_Units__c</fullName>
    <label>Flowsheet Total Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>