force-app/main/default/objects/Flowsheet_History__c/fields/Summary_Information_Units__c.field-meta.xml
<CustomField>
    <fullName>Summary_Information_Units__c</fullName>
    <label>Summary Information Units</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>